# shared-flow-testing

./: .gitignore  Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml  test-report.xml
.github/: dependabot.yml
.github/scripts/: sbom_json_to_csv.py
.github/workflows/: continuous-integration.yml  dependabot-auto-merge.yml  pr-lint.yaml  sbom.yml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-integration-tests.yml  run-smoke-tests.yml
proxies/live/apiproxy/: sft.xml
proxies/live/apiproxy/policies/: AssignMessage.AddPayloadToSplunkTest.xml  AssignMessage.Errors.CatchAllMessage.xml  AssignMessage.SetSplunkPayloadVars.xml  AssignMessage.SetUserIdToIdToNhsNumber.xml  AssignMessage.SetUserIdToIdTokenSubject.xml  AssignMessage.Swap.RequestHeaders.xml  FlowCallout.ExtendedAttributes.xml  FlowCallout.LogToSplunk.xml  FlowCallout.SetUserId.xml  FlowCallout.UserRoleService.xml  FlowCallout.UserRoleServiceV2.CustomHeader.xml  FlowCallout.UserRoleServiceV2.DefaultHeader.xml  FlowCalloutSingleASIDApply.xml  JavaScript.SetHeaderFields.xml  JavaScript.SetLoggingFields.xml  (+4 more)
proxies/sandbox/apiproxy/: sft.xml
sandbox/: app.js  app.spec.js  handlers.js  package-lock.json  package.json
scripts/: update-sbom.py
specification/: shared-flow-testing.yaml
tests/: api_tests.py  conftest.py  pytest.ini  requirements.txt  splunk_logging_schema.json  test_endpoints.py  test_enhanced-verify-api-key.py  test_enhanced_verify_api_key.py  test_extended_attributes.py  test_single_asid_apply.py  test_smoke_tests.py  test_splunk_logging.py  test_user_role_service_v2.py  test_user_role_service_v2_custom_header.py  test_user_role_service_v2_default_header.py  test_user_roles.py
tests/configuration/: config.py  environment.py
tests/test_splunk/: sample.json  sample1.json  splunk_logging_schema copy.json  splunk_logging_schema.json  test_splunkloging.py
tests/utils/: config.py  helpers.py  splunk_logging_schema.json
(+4 files in other folders)
