[project]
python = "^3.9"

[tool.poetry]
name = "shared-flow-testing"
version = "0.0.1-alpha"
description = "TODO"
authors = [
    #TODO add authors
]
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/shared-flow-testing"
homepage = "https://github.com/NHSDigital/shared-flow-testing"
keywords = ["healthcare", "uk", "nhs"] #TODO add additional keywords


[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
assertpy = "^1.1"
pytest-docker = "^0.10.3"
pytest-xdist = "^2.5.0"
pytest-sugar = "^0.9.4"
PyJWT = "^2.3.0"
python-dotenv = "^0.19.2"
pytest-rerunfailures = "^10.2"
pytest-nhsd-apim = "^3.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^23.0.0"
pip-licenses = "^2.0.1"
jinja2 = "^2.11.1"
pyyaml = "^5.2"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.34"
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.7.3"
pytest-asyncio = "^0.14.0"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

